welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: ')' expected but '}' found.
  }
  ^SnakeBuggle:25: error: expected start of definition
override def run() {  
         ^SnakeBuggle:28: error: Unmatched closing brace '}' ignored here
}
^