welcome.lessons.welcome.traversal.Snake.scala.code
def test() {
  if (estFaceMur()) {
    gauche()
    if (estFaceMur() {
      droite()
      return true
    }
  }
}
return false }














override def run() {  
}